--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Redes sociais</title>
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/bluesky-rede-social-2.jpg" width="300" height="50" alt=""></a><br>
+            <a href="#" target="tela"></a>
+        </section>
+    </main>
 </body>
 </html>
