--- a/blue.html
+++ b/blue.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="">
+    <img src="imagens/tela-blue.jpeg" alt="">
     <a href="https://bsky.app/profile/gabedsantos.bsky.social" target="_blank">Acesse</a>
 </body>
 </html>
