--- a/linkedin.html
+++ b/linkedin.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-linkdin.jpg" alt="">
+    <img src="imagens/tela-link.jpeg" alt="">
     <a href="https://www.linkedin.com/in/gabriel-dos-santos-7951a729b/" target="_blank">Acesse</a>
 </body>
 </html>
