--- a/git.html
+++ b/git.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="">
+    <img src="imagens/tela-git.jpg" alt="">
     <a href="https://github.com/Gabrielprojects0" target="_blank">Acesse</a>
 </body>
 </html>
